// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeNeighbourhood should match snapshot when no selected node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  nodesDropdownLabels={
    Array [
      Object {
        "id": "1",
        "value": "node",
      },
    ]
  }
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`NodeNeighbourhood should match snapshot when selected node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  nodesDropdownLabels={
    Array [
      Object {
        "id": "1",
        "value": "node",
      },
    ]
  }
  selectedElement={
    Object {
      "1": "node",
    }
  }
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
